# app/Http/Controllers/api/ColorUserContoller.php
@@ -12,9 +12,10 @@ class ColorUserContoller extends Controller
 {
   /**
      * Bind Color User
-     * @OA\Put (
+     * @OA\Post (
      *     path="/api/bind_color/{user_id}",
      *     tags={"Bind and Unbind"},
+     *     description="you can bind a color array with one or more colors in object.",
      *     security={{ "sanctum":{} }},
      *   @OA\Parameter(
      *         in="path",
@@ -64,11 +65,6 @@ class ColorUserContoller extends Controller
      */
     public function bind(Request $request, $user_id)
     {
-
-
-        dd($request->all(), $user_id);
-
-
         try{
 
             $userColor = DB::table('color_user')->where('user_id', $user_id)
@@ -92,9 +88,53 @@ class ColorUserContoller extends Controller
 
 
     }
-      /**
-     * Unind the specified resource in storage.
+     /**
+     * Bind Color User
+     * @OA\post (
+     *     path="/api/unbind_color/{user_id}",
+     *     tags={"Bind and Unbind"},
+     *     description="you can bind a color array with one or more colors in object.",
+     *     security={{ "sanctum":{} }},
+     *   @OA\Parameter(
+     *         in="path",
+     *         name="user_id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="color_id",
+     *                          type="int"
+     *                      ),
      *
+     *
+     *                 ),
+     *                 example={
+     *                  "colors":"[{color_id:int}]",
+     *
+     *
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Color binded successfully",
+     *
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="invalid",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="msg", type="string", example="fail"),
+     *          )
+     *      )
+     * )
      * @param  \Illuminate\Http\Request  $request
      * @param  int  $user_id
      *
